Fix nav bar z-index

--- a/frontend/src/css/components/nav_bar.scss
+++ b/frontend/src/css/components/nav_bar.scss
@@ -101,6 +101,10 @@
             }
         }
     }
+
+    .nav-bar-modal {
+        z-index: 0;
+    }
 }
 
 // @media (min-width: 700px) {
